--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-"Hello World" 
+<!DOCTYPE html>
+
+<html>
+<!-- Frost™ Player finder -->
+<head>
+
+	<title>Steam Name Drop</title>\
+
+	<link rel="stylesheet" type="text/css" href="Steam.css">
+</head>
+<body>
+<ul>
+<li><h2>Csgo</h2><li><h2>Csgo</h2><a href="Csgo"><img src="images/Csgo.jpg" alt="Mountain View" style="width:304px;height:228px;"></a></li>
+
+
+<li><h2>Dota 2</h2><img src="images/dota-2.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+
+
+
+                                
+<li><h2>TF2</h2><img src="images/TF2.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+
+
+
+<li><h2>G-MOD</h2><img src="images/G-MOD.png" alt="Mountain View" style="width:304px;height:228px;"></li>
+
+
+
+                                
+<li><h2>Ghost Recon Wild Land</h2><img src="images/GRWL.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+
+
+
+<li><h2>Terraria</h2><img src="images/terar.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+</body>
+</html>
