--- a/terraria.html
+++ b/terraria.html
@@ -4,12 +4,12 @@
 <!-- Frost™ Player finder -->
 <head>
 
-	<title></title>
+	<title>Terraria</title>
 
 	<link rel="stylesheet" type="text/css" href="Steam.css">
 </head>
 <body>
 <ul>
-<li><h2></h2><img src="images/.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+<li><h2>Terraria</h2><img src="images/terraria.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
 </body>
 </html>
