--- a/steamnamedrop.html
+++ b/steamnamedrop.html
@@ -4,25 +4,25 @@
 <!-- Frost™ Player finder -->
 <head>
 
-	<title>Steam Name Drop</title>\
+	<title>Steam Name Drop</title>
 
 	<link rel="stylesheet" type="text/css" href="Steam.css">
 </head>
 <body>
 <ul>
-<li><h2>Csgo</h2><li><h2>Csgo</h2><a href="Csgo"><img src="images/Csgo.jpg" alt="Mountain View" style="width:304px;height:228px;"></a></li>
+<li><h2>Csgo</h2><a href="Csgo"><img src="images/Csgo.png" alt="Mountain View" style="width:304px;height:228px;"></a></li>
 
 
-<li><h2>Dota 2</h2><img src="images/dota-2.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+<li><h2>Dota 2</h2><img src="images/Dota.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
 
 
 
                                 
-<li><h2>TF2</h2><img src="images/TF2.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+<li><h2>TF2</h2><img src="images/Tf2.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
 
 
 
-<li><h2>G-MOD</h2><img src="images/G-MOD.png" alt="Mountain View" style="width:304px;height:228px;"></li>
+<li><h2>G-MOD</h2><img src="images/G-MOD.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
 
 
 
@@ -31,6 +31,6 @@
 
 
 
-<li><h2>Terraria</h2><img src="images/terar.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
+<li><h2>Terraria</h2><img src="images/terraria.jpg" alt="Mountain View" style="width:304px;height:228px;"></li>
 </body>
 </html>
